k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-services
  labels:
    app.kubernetes.io/part-of: deploy-services
