k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-services-ingress
  namespace: deploy-services
  labels:
    app.kubernetes.io/part-of: deploy-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /fastify(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastify-service
                port:
                  number: 3001
          - path: /nextjs(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nextjs-service
                port:
                  number: 3002
          - path: /fastapi(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
